Add css file and update index.html.

--- a/02_CSS_Essential_Training/Code/css_portfolio/index.html
+++ b/02_CSS_Essential_Training/Code/css_portfolio/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -34,10 +35,7 @@
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
           <h3>VimLikeVSCode</h3>
-          <img
-            src="https://i.imgur.com/Z15AAhm.png"
-            alt="VimLikeVSCode Screenshot"
-          />
+          <img src="images/vim_vs.png" alt="VimLikeVSCode Screenshot" />
           <p>
             Created a neovim guide and vim script file with guide to getting
             started with neovim quickly.
