Add color palette and basic section colors and background color.

--- a/02_CSS_Essential_Training/Code/css_portfolio/index.html
+++ b/02_CSS_Essential_Training/Code/css_portfolio/index.html
@@ -25,7 +25,7 @@
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-      <section>
+      <section class="projects">
         <h2>Featured Projects</h2>
         <p>
           View selected projects below. More information can be found on my
@@ -48,7 +48,7 @@
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
-      <section>
+      <section class="work-experience">
         <h2>Work Experience</h2>
         <p>
           As a developer I have been part of multiple data science, web
@@ -148,7 +148,7 @@
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <section>
+      <section class="education">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
