Update CSS and background.

--- a/02_CSS_Essential_Training/Code/css_portfolio/index.html
+++ b/02_CSS_Essential_Training/Code/css_portfolio/index.html
@@ -40,8 +40,11 @@
             Created a neovim guide and vim script file with guide to getting
             started with neovim quickly.
           </p>
-          <a href="https://github.com/AnmolTomer/vim" target="_blank"
-            >View project</a
+          <a
+            class="btn"
+            href="https://github.com/AnmolTomer/vim"
+            target="_blank"
+            >View Project</a
           >
         </section>
         <!-- End of Project block. -->
@@ -50,6 +53,10 @@
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience">
         <h2>Work Experience</h2>
+        <p>
+          See my complete work history on
+          <a href="https://www.linkedin.com/in/anmol-tomer/">LinkedIn</a>
+        </p>
         <p>
           As a developer I have been part of multiple data science, web
           development, computer vision teams at various organizations. Work
