Add code for line spacing, fix font-weight, line-height.

--- a/02_CSS_Essential_Training/Code/css_portfolio/index.html
+++ b/02_CSS_Essential_Training/Code/css_portfolio/index.html
@@ -186,19 +186,19 @@
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
         <div class="content-wrap">
-          <h2>Let's Keep in Touch!</h2>
+          <h2>Let's Keep in Touch! 👋🏻</h2>
 
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul>
             <!-- Email -->
             <li>
-              <a href="mailto:anmol3540@gmail.com">anmol3540@gmail.com</a>
+              <a href="mailto:anmol3540@gmail.com">Email</a>
             </li>
 
             <!-- Website -->
             <li>
               <a href="https://anmoltomer.github.io/" target="_blank"
-                >anmoltomer.github.io
+                >Portfolio
               </a>
             </li>
 
