--- a/04_Learning_ECMAScript_ES6+/06_04/index.html
+++ b/04_Learning_ECMAScript_ES6+/06_04/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Building Promises</title>
-    <!-- <script src="script.js" defer></script> -->
-    <script src="script2.js" defer></script>
+    <title>Async Await</title>
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Building Promises</h1>
+    <h1>Async Await</h1>
   </body>
 </html>
